corrected case for OVVO Optics title

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           special and unique designs true to who they are as unique individuals.
         </p>
       </div>
-      <h5 class="mt-3" id="ovvoOptics"><strong>OVVO Optics</strong></h5>
+      <h5 class="mt-3" id="ovvoOptics"><strong>OVVO OPTICS</strong></h5>
       <div class="clearfix">
         <img src="ovvo-shadow.jpg" class="img-inline float-sm-left mr-sm-2 mx-auto d-block">
         <p>
