added frames gallery; updated package pricing info

--- a/index.html
+++ b/index.html
@@ -98,6 +98,170 @@
     </div>
     <div class="mt-4" id="frames">
       <h1 class="title-text text-center">Our Frames and Their Stories</h1>
+      <div class="embed-responsive embed-responsive-1by1 col-12 col-lg-6 mx-auto">
+        <div id="framesCarousel" class="embed-responsive-item carousel slide" data-ride="carousel">
+          <div class="carousel-inner h-100">
+            <div class="carousel-item h-100 active">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/01.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/02.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/03.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/04.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/05.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/06.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/07.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/08.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/09.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/10.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/11.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/12.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/13.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/14.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/15.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/16.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/17.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/18.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/19.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/20.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/21.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/22.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/23.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/24.jpg" class="w-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/25.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/26.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/27.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/28.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/29.jpg" class="h-100">
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <div class="d-flex h-100 justify-content-center align-items-center">
+                <img src="carousel1/30.jpg" class="h-100">
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#framesCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#framesCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
       <p>
         With most eyeglasses being made and distributed by just a few giant companies, their monopoly is rapidly eliminating the general public's choices.
         Framed by Tone is taking a stand. As you select the perfect pair of frames from us, know that you are supporting small independent shops.
@@ -246,7 +410,7 @@
         <li>Most all lens designs come included with hydrophobic / oleophobic / anti-static / anti-scratch / UV400 coating. Two year warranty on normal wear and tear.</li>
         <li>As an option we do offer anti-reflective lens coating with minimum- to no-color hue for an additional fee.</li>
         <li>
-          We offer house lens / frame packages including impact resistant material / basic anti-reflective / scratch coating and UV for $149 (single vision), or $349 (no-line).
+          We offer house lens / frame packages including impact resistant material / basic anti-reflective / scratch coating and UV starting at $169 (single vision), or $329 (no-line).
           One year warranty on normal wear and tear.
         </li>
         <li>
