updated location and services info

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       </div>
       <div class="row">
         <div class="col-lg-4 text-center">
-          Monday - Saturday by Appointment Only
+          Monday - Saturday
+          <br>
+          by Appointment Only
         </div>
         <div class="col-lg-4 text-center">
           <a href="tel:206-637-9961" class="text-light">206.637.9961</a>
@@ -63,6 +65,8 @@
           Framing clients in
           <br>
           Kansas City, MO 64151
+          <br>
+          and Surrounding Areas
         </div>
       </div>
     </div>
@@ -410,8 +414,8 @@
         <li>Most all lens designs come included with hydrophobic / oleophobic / anti-static / anti-scratch / UV400 coating. Two year warranty on normal wear and tear.</li>
         <li>As an option we do offer anti-reflective lens coating with minimum- to no-color hue for an additional fee.</li>
         <li>
-          We offer house lens / frame packages including impact resistant material / basic anti-reflective / scratch coating and UV starting at $169 (single vision), or $329 (no-line).
-          One year warranty on normal wear and tear.
+          We offer house lens / frame packages for select frames with impact resistant material / basic anti-reflective / scratch coating and UV starting at $169 (single vision),
+          or $329 (no-line). One year warranty on normal wear and tear.
         </li>
         <li>
           We are able to provide our clients with contact lens supplies at a competative cost.
