--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <a class="nav-item nav-link" href="#whoWeAre" onclick="app.closeMenu()">Who We Are</a>
           <a class="nav-item nav-link" href="#frames" onclick="app.closeMenu()">Our Frames</a>
           <ul class="menu-list">
+            <li><a class="nav-item nav-link" href="#bajazzo" onclick="app.closeMenu()">Bajazzo ARTbox</a></li>
             <li><a class="nav-item nav-link" href="#zenBarcelona" onclick="app.closeMenu()">Zen Barcelona</a></li>
             <li><a class="nav-item nav-link" href="#ovvoOptics" onclick="app.closeMenu()">OVVO Optics</a></li>
             <li><a class="nav-item nav-link" href="#carolineAbramParis" onclick="app.closeMenu()">Caroline Abram Paris</a></li>
@@ -60,6 +61,8 @@
           <a href="tel:206-637-9961" class="text-light">206.637.9961</a>
           <br>
           <a href="mailto:tone@framedByTone.com" class="text-light">tone@framedByTone.com</a>
+          <br>
+          <a href="https://www.facebook.com/framedbytone" target="_blank"><img src="facebook-logo.png" class="m-1"></a>
         </div>
         <div class="col-lg-4 text-center">
           Framing clients in
@@ -278,6 +281,30 @@
         Every pair of glasses is thoughtfully fabricated with an experienced optician. With prior adjustments to the frame and numerous measurements to ensure accuracy,
         we interpret both functional and aesthetic variables to produce the finest quality eyewear for you.
       </p>
+      <div class="row mt-3" id="bajazzo">
+        <div class="col-12 col-lg-8">
+          <img src="bajazzo-logo.jpg" class="img-fluid">
+        </div>
+      </div>
+      <h5>
+        <strong>BAJAZZO ARTbox</strong>
+        <br>
+        <em>“WE CREATE A WORLD IN WHICH UNCOMPROMISING DESIGN IS PAIRED WITH INNOVATIVE TECHNOLOGY MADE IN GERMANY.”</em>
+      </h5>
+      <div class="clearfix">
+        <img src="bajazzo-frames.jpg" class="img-inline float-sm-right ml-sm-2 mx-auto d-block">
+        <p>
+          A LOVE FOR DESIGN-
+          <br>
+          In 1996, Matthias Balduwein, a master optician, designed and produced his exclusive BAJAZZO Collection entirely in Germany.
+          It has been so well received that one third of German opticians are selling the BAJAZZO eyewear exclusively.
+        </p>
+        <img src="bajazzo-mirror.jpg" class="img-inline float-sm-left mr-sm-2 mx-auto d-block">
+        <p>
+          Matthias mentioned that, “To create and design classical and fashionable pieces that give individuality to the wearer, without dominating their personal appearance was his vision.”
+          All handmade with only the best materials along with an extremely accurate quality control of every frame is an important part of the manufacturing process. Bajazzo ARTbox, ART for you!
+        </p>
+      </div>
       <h5 class="mt-3" id="zenBarcelona">
         <strong>ZEN BARCELONA</strong>
         <br>
