updated Q&A for accepting insurance

--- a/index.html
+++ b/index.html
@@ -470,9 +470,19 @@
           Do you accept insurance?
         </dt>
         <dd>
-          Framed by Tone is an Out-of-Network provider for all vision insurance providers.
-          However, with proof of insurance, we extend a complimentary 25%-35% discount (depending on the lens type) off our retail pricing for a complete pair of prescription eyeglasses.
-          We also can provide you with simple instructions and/or help you to fill out all necessary information for collecting any additional out-of-network reimbursement amount directly from your provider.
+          Framed by Tone, LLC is a preferred out-of-network provider for all the vision contributors listed below.
+          We file electronic claims for all carriers and receive real-time benefit coverage for most.
+          This means we can deduct your benefit coverage from your cost so you can be assured of accurate out-of-pocket expense.
+          <ul>
+            <li>VSP – We accept direct reimbursement from VSP</li>
+            <li>Cigna Vision – We accept direct reimbursement from Cigna</li>
+            <li>Eyemed Vision – Direct reimbursement from Eyemed coming soon</li>
+            <li>Blue View Vision</li>
+            <li>Aetna Vision</li>
+            <li>Superior Vision</li>
+            <li>Spectera (United HealthCare Vision) – Real-time benefit coverage coming soon</li>
+            <li>Davis Vision – Real-time benefit coverage coming soon</li>
+          </ul>
         </dd>
         <dt>
           Do you accept FSA and HSA?
