added referral rewards program

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <li><a class="nav-item nav-link" href="#dilliDalli" onclick="app.closeMenu()">Dilli Dalli Collection</a></li>
           </ul>
           <a class="nav-item nav-link" href="#services" onclick="app.closeMenu()">Our Services</a>
+          <ul class="menu-list">
+            <li><a class="nav-item nav-link" href="#referralRewards" onclick="app.closeMenu()">Referral Rewards Program</a></li>
+          </ul>
           <a class="nav-item nav-link" href="#faqs" onclick="app.closeMenu()">FAQs</a>
           <ul class="menu-list">
             <li><a class="nav-item nav-link" href="#prescription" onclick="app.closeMenu()">Prescription</a></li>
@@ -450,6 +453,15 @@
         </li>
         <li>We also provide custom products &amp; services such as sun-clips, modified lens shapes, and rhinestone setting &amp; replacement.</li>
       </ul>
+      <h3 class="title-text text-center" id="referralRewards">Referral Rewards Program</h3>
+      <p>
+        Framed by Tone is proud to start a new referral rewards program to help get the word out and reward my valuable clients!
+        Word of mouth is greatly valuable to me. So now, for every new client you refer to Framed by Tone who purchases a complete pair of glasses,
+        you will receive 10% off your next purchase (up to a maximum of 8 referrals for 80%).
+        For the referral to count, that person must provide your name (so we know who was awesome).
+        The discount is applicable to a purchase of frame and lens only (no  contact lenses), and cannot be combined with any other offer.
+        The referral discount must be used within 2 years from the first person referred.
+      </p>
     </div>
     <div class="mt-4" id="faqs">
       <h1 class="title-text text-center">FAQs</h1>
@@ -509,14 +521,12 @@
             Order processing time varies depending on the type of lenses ordered, the availability of product and our inspection process.
             <strong>*We abide by ANSI spectacle Lens Guidelines*</strong>
           </p>
-          <p>
-            Please use this as a general guide for processing times:
-            <ul>
-              <li>Frame with Single Vision or custom Sunglass Lenses: 3 – 5 business days</li>
-              <li>Frame with Progressive Lenses: 7 – 10 business days</li>
-            </ul>
-            ** Customized and prescription lenses are non-refundable. **
-          </p>
+          Please use this as a general guide for processing times:
+          <ul>
+            <li>Frame with Single Vision or custom Sunglass Lenses: 3 – 5 business days</li>
+            <li>Frame with Progressive Lenses: 7 – 10 business days</li>
+          </ul>
+          ** Customized and prescription lenses are non-refundable. **
         </dd>
       </dl>
     </div>
